src/global.scss
/* You can add global styles to this file, and also import other style files */

// Fonts
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');

// Ionic
/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import '@ionic/angular/css/core.css';

///* Basic CSS for apps built with Ionic */
//@import '@ionic/angular/css/normalize.css';
@import '@ionic/angular/css/structure.css';
//@import '@ionic/angular/css/typography.css';
@import '@ionic/angular/css/display.css';

/* Optional CSS utils that can be commented out */
@import '@ionic/angular/css/padding.css';
@import '@ionic/angular/css/float-elements.css';
@import '@ionic/angular/css/text-alignment.css';
@import '@ionic/angular/css/text-transformation.css';
@import '@ionic/angular/css/flex-utils.css';

ion-modal {
	--width: fit-content;
	--min-width: 250px;
	--max-width: 90%;
	--height: fit-content;
	--max-height: 80%;
	--border-radius: 6px;
	--box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
	--overflow: auto;

	@media (max-width: 768px) {
		--min-width: 80%;
	}

	@media (max-width: 420px) {
		--min-width: 90%;
	}
}

